# deck-analyzer

./: Cargo.toml  test_deck.txt
src/: analyzer.rs  db.rs  decklist.rs  error.rs  lib.rs  main.rs  source_decks.rs  types.rs
tests/: analyze.rs  analyzer_stats.rs  commander_validation.rs  decklist.rs  source_decks.rs  sync.rs  validate.rs
