[package]
name = "deck-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
